--- a/index.html
+++ b/index.html
@@ -106,6 +106,50 @@
 
         </section>
 
+        <section>
+            <div class="about">
+                <h3 class="title">Why Choose Us</h3>
+                <p class="description" >
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+                </p>
+            </div>
+            <div class="container-1st-part">
+                <div class="container">
+                    <img class="icon" src="Images/hotel 1.jpg" alt="">
+                    <h3 class="title" >Handpicked Hotels</h3>
+                    <p class="description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+                <div class="container-2">
+                    <img class="icon"  src="Images/map 1.jpg" alt="">
+                    <h3 class="title">World Class Service</h3>
+                    <p class="description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+
+            </div>
+            <div class="container-2nd-part">
+                <div class="container">
+                    <img class="icon"  src="Images/price-tag 1.jpg" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+
+        </section>
+        <section class="Newsletter">
+            <div class="Subscribe-box">
+                <h3 class="title">Newsletter</h3>
+                <p class="description" >Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <div>
+                    
+                </div>
+            </div>
+            <div class="img">
+
+            </div>
+
+        </section>
+
 
     </main>
     <Footer>
