--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 <body>
     <header>
         <nav>
+            <div class="logo">
+                <img class="logo-img" src="Images/Group 40071 (2).png" alt="">
+            <h3 class="title">S.M.Badhon <span>Travel</span></h3>
+            </div>
+            <ul>
+                <li>Home</li>
+                <li>Packages</li>
+                <li>Testimonial</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
 
         </nav>
         <div class="Starting-Banner">
@@ -106,7 +117,7 @@
 
         </section>
 
-        <section>
+        <section class="why-choose-us" >
             <div class="about">
                 <h3 class="title">Why Choose Us</h3>
                 <p class="description" >
@@ -129,22 +140,34 @@
             <div class="container-2nd-part">
                 <div class="container">
                     <img class="icon"  src="Images/price-tag 1.jpg" alt="">
-                    <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <h3 class="title">Handpicked Hotels</h3>
+                    <p class="description" >Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                 </div>
             </div>
 
         </section>
-        <section class="Newsletter">
+        <section class="newsletter">
             <div class="Subscribe-box">
                 <h3 class="title">Newsletter</h3>
-                <p class="description" >Get your daily dose of travel news & tips. Sign up today!</p>
+                <p class="description" >Get your daily dose of travel news & tips. <br>Sign up today!</p>
                 <hr>
                 <div>
-                    
+                    <input class="enter-your" placeholder="Enter your name" type="text" name="" id="">
+                </div>
+                <div>
+                    <input class="enter-your"  placeholder="Enter your email" type="text" name="" id="">
+                </div>
+
+                <div>
+                    <input class="primary-button"  type="submit" value="Subscribe">
                 </div>
             </div>
-            <div class="img">
+            <div class="end-part">
+                <img class="last-img" src="Images/Rectangle 8 (1).png" alt="">
+                <div class="off-badge">
+                    <p class="description">Travel.com</p>
+                    <h3 class="title">Save up to 70%</h3>
+                </div>
 
             </div>
 
@@ -153,6 +176,15 @@
 
     </main>
     <Footer>
+        <div class="footer">
+            <h3 class="title">S.M.Badhon <span>Travel</span></h3>
+            <p class="description">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</p>
+            <div>
+            <img src="Images/Social.jpg" alt="">
+            </div>
+            <hr>
+            <small>2017, All Rights Reserved.</small>
+        </div>
 
     </Footer>
     
